--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
 <html>
+	<!-- $head.html{ -->
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -39,39 +40,44 @@
 	<![endif]-->
 
 	</head>
+	<!-- } -->
 	<body>
 		
 	<div class="fh5co-loader"></div>
 	
 	<div id="page">
-	<nav class="fh5co-nav" role="navigation">
-		<div class="container">
-			<div class="row">
-				<div class="col-xs-2">
-					<div id="fh5co-logo"><a href="index.html"><img src="/images/logo.png" /> daytrader.ai</a></div>
+		<!-- $nav.html{ -->
+		<nav class="fh5co-nav" role="navigation">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-2">
+						<div id="fh5co-logo">
+							<a href="index.html"></a><img class="logo" src="images/logo.png" /></a>
+							<a href="index.html">daytrader.ai</a>
+						</div>
+					</div>
+					<div class="col-xs-10 text-right menu-1">
+						<ul>
+							<li class="active"><a href="index.html">Home</a></li>
+							<li><a href="work.html">Work</a></li>
+							<li><a href="about.html">About</a></li>						
+							<li><a href="contact.html">Contact</a></li>
+							<li class="btn-cta"><a href="#"><span>Login</span></a></li>
+						</ul>
+					</div>
 				</div>
-				<div class="col-xs-10 text-right menu-1">
-					<ul>
-						<li class="active"><a href="index.html">Home</a></li>
-						<li><a href="work.html">Work</a></li>
-						<li><a href="about.html">About</a></li>						
-						<li><a href="contact.html">Contact</a></li>
-						<li class="btn-cta"><a href="#"><span>Login</span></a></li>
-					</ul>
-				</div>
+				
 			</div>
-			
-		</div>
-	</nav>
-
-	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/img_bg_2.jpg);">
+		</nav>
+		<!-- } -->
+	<header id="fh5co-header" class="fh5co-cover" role="banner" style="background-image:url(images/galaxy.jpg);">
 		<div class="overlay"></div>
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<div class="display-t">
 						<div class="display-tc animate-box" data-animate-effect="fadeIn">
-							<h1>Start Your Journey</h1>
+							<h1>Some cool tag line.</h1>
 							<h2>A mathematician, like a painter or a poet, is a maker of patterns. - G. H. Hardy</h2>
 							<div class="row">
 								<form class="form-inline" id="fh5co-header-subscribe">
@@ -229,6 +235,7 @@
 		</div>
 	</div>
 
+	<!-- $foot.html{ -->
 	<footer id="fh5co-footer" role="contentinfo">
 		<div class="container">
 			<div class="row row-pb-md">
@@ -287,6 +294,7 @@
 
 		</div>
 	</footer>
+	<!-- } -->
 	</div>
 
 	<div class="gototop js-top">
