--- a/nav.html
+++ b/nav.html
@@ -1,9 +1,12 @@
+
 <nav class="fh5co-nav" role="navigation">
         <div class="container">
             <div class="row">
                 <div class="col-xs-2">
-                    <a href="index.html"><img class="logo" src="images/logo.png" /></a>
-                    <div id="fh5co-logo"><a href="index.html">daytrader.ai</a></div>
+                    <div id="fh5co-logo">
+                        <a href="index.html"><img class="logo" src="images/logo.png" /></a>
+                        <a href="index.html">daytrader.ai</a>
+                    </div>
                 </div>
                 <div class="col-xs-10 text-right menu-1">
                     <ul>
