--- a/about.html
+++ b/about.html
@@ -112,23 +112,21 @@
 			</div>
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<span>Productive Staff</span>
-					<h2>Meet Our Staff</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<span>Data Wranglers</span>
+					<h2>Meet Our Group</h2>
+					<p>Dedicated to sharing our fintech resarch.</p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-4 col-sm-4 animate-box" data-animate-effect="fadeIn">
 					<div class="fh5co-staff">
 						<img src="images/person1.jpg" alt="Free HTML5 Templates by gettemplates.co">
-						<h3>Jean Smith</h3>
-						<strong class="role">Web Designer</strong>
-						<p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
+						<h3>Corey Auger</h3>
+						<strong class="role">Computer Scientist</strong>
+						<p>We must go deeper !</p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
-							<li><a href="#"><i class="icon-github"></i></a></li>
+							<li><a href="https://twitter.com/coreyauger"><i class="icon-twitter"></i></a></li>
+							<li><a href="https://github.com/coreyauger"><i class="icon-github"></i></a></li>
 						</ul>
 					</div>
 				</div>
@@ -171,14 +169,14 @@
                 <div class="row animate-box">
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
                         <h2>Lets Get Started</h2>
-                        <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+                        <p>Want access to data and patterns to try your own learning algorithms?</p>
                     </div>
                 </div>
                 <div class="row animate-box">
                     <div class="col-md-8 col-md-offset-2">
                         <form class="form-inline">
                             <div class="col-md-6 col-md-offset-3 col-sm-6">
-                                <button type="submit" class="btn btn-default btn-block">Get In Touch</button>
+                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSf6mMBzizzQvyYaSkhDK28-2-mMy6GRKL7hEXuH9qOop8sksA/viewform"><button class="btn btn-default btn-block">Join Beta</button></a>
                             </div>
                         </form>
                     </div>
@@ -190,8 +188,8 @@
 			<div class="row row-pb-md">
 				<div class="col-md-4 fh5co-widget">
 					<h3>daytrader.ai</h3>
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-					<p><a href="#">Learn More</a></p>
+					<p>Want access to data and patterns to try your own learning algorithms?</p>
+					<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSf6mMBzizzQvyYaSkhDK28-2-mMy6GRKL7hEXuH9qOop8sksA/viewform">Join Beta</a></p>
 				</div>
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
 					<ul class="fh5co-footer-links">
