--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 									<div class="col-md-8 col-md-offset-2">
 										<div class="form-group">
 											<input type="text" class="form-control" id="email" placeholder="Enter your email">
-											<button type="submit" class="btn btn-default">Join Now</button>
+											<button class="btn btn-default" onclick="window.location=href='https://docs.google.com/forms/d/e/1FAIpQLSf6mMBzizzQvyYaSkhDK28-2-mMy6GRKL7hEXuH9qOop8sksA/viewform';">Join Now</button>
 										</div>
 									</div>
 								</form>
@@ -221,27 +221,27 @@
                 <div class="row animate-box">
                     <div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
                         <h2>Lets Get Started</h2>
-                        <p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+                        <p>Want access to data and patterns to try your own learning algorithms?</p>
                     </div>
                 </div>
                 <div class="row animate-box">
                     <div class="col-md-8 col-md-offset-2">
                         <form class="form-inline">
                             <div class="col-md-6 col-md-offset-3 col-sm-6">
-                                <button type="submit" class="btn btn-default btn-block">Get In Touch</button>
+                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSf6mMBzizzQvyYaSkhDK28-2-mMy6GRKL7hEXuH9qOop8sksA/viewform"><button class="btn btn-default btn-block">Join Beta</button></a>
                             </div>
                         </form>
                     </div>
                 </div>
             </div>
-        </div> 
+        </div>
 <footer id="fh5co-footer" role="contentinfo">
 		<div class="container">
 			<div class="row row-pb-md">
 				<div class="col-md-4 fh5co-widget">
 					<h3>daytrader.ai</h3>
-					<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-					<p><a href="#">Learn More</a></p>
+					<p>Want access to data and patterns to try your own learning algorithms?</p>
+					<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSf6mMBzizzQvyYaSkhDK28-2-mMy6GRKL7hEXuH9qOop8sksA/viewform">Join Beta</a></p>
 				</div>
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
 					<ul class="fh5co-footer-links">
