--- a/index.html
+++ b/index.html
@@ -103,15 +103,15 @@
 					<div class="col-half animate-box" data-animate-effect="fadeInLeft">
 						<div class="table-c">
 							<div class="desc">
-								<span>Try Our Awesome Stuff</span>
-								<h3>This is another header</h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics.</p>
-								<p><a href="#" class="btn btn-lg btn-primary">Learn More</a></p>
+								<span>Training Data</span>
+								<h3>Define Patterns</h3>
+								<p>Define market trigger points and let our algorithm identify and generate training data for machine learning algorthmns.</p>
+								<p><a href="#" class="btn btn-lg btn-primary">Join Beta</a></p>
 							</div>
 						</div>
 					</div>
 					<div class="col-half-image-holder animate-box" data-animate-effect="fadeInRight">
-						<img class="img-responsive" src="images/samsungs6.png" alt="samsung">
+						<img class="img-responsive" src="images/samsungs2.png" alt="daytrader">
 					</div>
 				</div>
 			</div>
@@ -124,28 +124,28 @@
 				<div class="col-md-4 col-sm-4 text-center">
 					<div class="feature-center animate-box" data-animate-effect="fadeIn">
 						<span class="icon">
-							<i class="icon-eye"></i>
+							<i class="icon-bar-graph"></i>
 						</span>
-						<h3>Retina Ready</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
+						<h3>Identify Market Trends</h3>
+						<p>Create scripts to identify market trigger patterns.  Daytraders use these signals to identify potential entries into the Market.</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4 text-center">
 					<div class="feature-center animate-box" data-animate-effect="fadeIn">
 						<span class="icon">
-							<i class="icon-command"></i>
+							<i class="icon-flow-line"></i>
 						</span>
-						<h3>Fully Responsive</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
+						<h3>Train Machine Learning</h3>
+						<p>We then search through 20 years of Nasdaq100 data for those triggers.  This data can then be fed into machine learning to create probability distributions.</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4 text-center">
 					<div class="feature-center animate-box" data-animate-effect="fadeIn">
 						<span class="icon">
-							<i class="icon-power"></i>
+							<i class="icon-notification"></i>
 						</span>
-						<h3>Web Starter</h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
+						<h3>Receive Notifications</h3>
+						<p>Let our service track and perform the math, updating you with realtime potentail entry points and probabilities via webhook or other notifications.</p>
 					</div>
 				</div>
 			</div>
@@ -156,9 +156,9 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<span>Want Some Cool Stuff</span>
-					<h2>Our Project</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
+					<span>How does it work</span>
+					<h2>Our Research</h2>
+					<p>We strive to be as trasparent as possible with both our approach and results.  Our goal is to provide research and open source code that people can apply to patterns in the market.  Below are some of the areas we have appled time to.</p>
 				</div>
 			</div>
 		</div>
@@ -191,7 +191,7 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Happy Clients</h2>
+					<h2>Leveling the playing field</h2>
 				</div>
 			</div>
 			<div class="row">
