--- a/foot.html
+++ b/foot.html
@@ -9,11 +9,9 @@
                 </div>
                 <div class="row animate-box">
                     <div class="col-md-8 col-md-offset-2">
-                        <form class="form-inline">
-                            <div class="col-md-6 col-md-offset-3 col-sm-6">
-                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSf6mMBzizzQvyYaSkhDK28-2-mMy6GRKL7hEXuH9qOop8sksA/viewform"><button class="btn btn-default btn-block">Join Beta</button></a>
-                            </div>
-                        </form>
+						<div class="col-md-6 col-md-offset-3 col-sm-6">
+							<a href="https://docs.google.com/forms/d/e/1FAIpQLSf6mMBzizzQvyYaSkhDK28-2-mMy6GRKL7hEXuH9qOop8sksA/viewform"  style="height: auto;" class="btn btn-default btn-block">Join Beta</a>
+						</div>
                     </div>
                 </div>
             </div>
