--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 								<span>Training Data</span>
 								<h3>Define Patterns</h3>
 								<p>Define market trigger points and let our algorithm identify and generate training data for machine learning algorthmns.</p>
-								<p><a href="#" class="btn btn-lg btn-primary">Join Beta</a></p>
+								<p><a href="https://docs.google.com/forms/d/e/1FAIpQLSf6mMBzizzQvyYaSkhDK28-2-mMy6GRKL7hEXuH9qOop8sksA/viewform" class="btn btn-lg btn-primary">Join Beta</a></p>
 							</div>
 						</div>
 					</div>
@@ -158,7 +158,7 @@
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<span>How does it work</span>
 					<h2>Our Research</h2>
-					<p>We strive to be as trasparent as possible with both our approach and results.  Our goal is to provide research and open source code that people can apply to patterns in the market.  Below are some of the areas we have appled time to.</p>
+					<p>We strive to be as trasparent as possible with both our approach and results.  Our goal is to provide research and open source code that people can apply to patterns in the market.  Below are some of the areas we have studied.</p>
 				</div>
 			</div>
 		</div>
@@ -191,7 +191,7 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Leveling the playing field</h2>
+					<h2>Data Driven Investing</h2>
 				</div>
 			</div>
 			<div class="row">
@@ -226,11 +226,9 @@
                 </div>
                 <div class="row animate-box">
                     <div class="col-md-8 col-md-offset-2">
-                        <form class="form-inline">
-                            <div class="col-md-6 col-md-offset-3 col-sm-6">
-                                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSf6mMBzizzQvyYaSkhDK28-2-mMy6GRKL7hEXuH9qOop8sksA/viewform"><button class="btn btn-default btn-block">Join Beta</button></a>
-                            </div>
-                        </form>
+						<div class="col-md-6 col-md-offset-3 col-sm-6">
+							<a href="https://docs.google.com/forms/d/e/1FAIpQLSf6mMBzizzQvyYaSkhDK28-2-mMy6GRKL7hEXuH9qOop8sksA/viewform"  style="height: auto;" class="btn btn-default btn-block">Join Beta</a>
+						</div>
                     </div>
                 </div>
             </div>
