--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 						<span class="icon">
 							<i class="icon-bar-graph"></i>
 						</span>
-						<h3>Identify Market Trends</h3>
+						<h3>Market Trends</h3>
 						<p>Create scripts to identify market trigger patterns.  Daytraders use these signals to identify potential entries into the Market.</p>
 					</div>
 				</div>
@@ -135,7 +135,7 @@
 						<span class="icon">
 							<i class="icon-flow-line"></i>
 						</span>
-						<h3>Train Machine Learning</h3>
+						<h3>Machine Learning</h3>
 						<p>We then search through 20 years of Nasdaq100 data for those triggers.  This data can then be fed into machine learning to create probability distributions.</p>
 					</div>
 				</div>
@@ -144,7 +144,7 @@
 						<span class="icon">
 							<i class="icon-notification"></i>
 						</span>
-						<h3>Receive Notifications</h3>
+						<h3>Notifications</h3>
 						<p>Let our service track and perform the math, updating you with realtime potentail entry points and probabilities via webhook or other notifications.</p>
 					</div>
 				</div>
@@ -165,23 +165,25 @@
 		<div class="project-content">
 			<div class="col-half">
 				<div class="project animate-box" style="background-image:url(images/project-3.jpg);">
+					<a href="https://www.kaggle.com/daytrader/ema-65-crossover" target="_blank">
 					<div class="desc">
-						<span>Application</span>
-						<h3>Project Name</h3>
+						<span>kaggle data</span>
+						<h3>explore one of the datasets on kaggle</h3>
 					</div>
+					</a>
 				</div>
 			</div>
 			<div class="col-half">
 				<div class="project-grid animate-box" style="background-image:url(images/project-5.jpg);">
 					<div class="desc">
-						<span>Illustration</span>
-						<h3>Project Name</h3>
+						<span>Recurrent Neural Network RNN</span>
+						<h3>Results of applying RNN to our time series data.</h3>
 					</div>
 				</div>
 				<div class="project-grid animate-box" style="background-image:url(images/project-2.jpg);">
 					<div class="desc">
-						<span>Branding</span>
-						<h3>Project Name</h3>
+						<span>Data Analysis</span>
+						<h3>Exploring what it means to be a successful daytrader.</h3>
 					</div>
 				</div>
 			</div>
@@ -256,8 +258,7 @@
 				</div>
 
 				<div class="col-md-2 col-sm-4 col-xs-6 col-md-push-1">
-					<ul class="fh5co-footer-links">
-				
+					<ul class="fh5co-footer-links">				
 						<li><a href="#">Meetups</a></li>
 						<li><a href="#">API</a></li>
 					</ul>
@@ -272,10 +273,10 @@
 					</p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-twitter"></i></a></li>
-							<li><a href="#"><i class="icon-facebook"></i></a></li>
+							<li><a href="https://twitter.com/coreyauger"><i class="icon-twitter"></i></a></li>
+							<!--<li><a href="#"><i class="icon-facebook"></i></a></li>
 							<li><a href="#"><i class="icon-linkedin"></i></a></li>
-							<li><a href="#"><i class="icon-dribbble"></i></a></li>
+							<li><a href="#"><i class="icon-dribbble"></i></a></li>-->
 						</ul>
 					</p>
 				</div>
