--- a/about.html
+++ b/about.html
@@ -91,39 +91,46 @@
 		<div class="container">
 			<div class="about-content">
 				<div class="row animate-box">
-					<div class="col-md-6 col-md-push-6">
+					<!--<div class="col-md-6 col-md-push-6">-->
+					<div class="col-md-12 col-sm-8 animate-box" data-animate-effect="fadeIn">
 						<div class="desc">
 							<h3>History</h3>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quo est quis mollitia ratione magni assumenda repellat atque modi temporibus tempore ex. Dolore facilis ex sunt ea praesentium expedita numquam?</p> 
-							<p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci rem dolorem nesciunt perferendis quae amet deserunt eum labore quidem minima.</p>
+							<p>This journy started with the simple premiss.  There are professional daytraders out there that using technical analysis can tilt the odds in their favour.</p> 
+							<p>Since daytraders start by looking for a pattern setup, this seemed like an optimal job for a computer.  Further a lot of the caution around day trading 
+								was not to let your ego take over (again something a compter is better at).</p>
+							<p>Once a pattern is setup a daytrader looks for further indications that a trade will succeed, this usually involves viewing charts at multple time domains and 
+								applying a number of technical indicators.  Since most of these technical idicators rely on price movment in that time domain, this seems like a perfect task 
+								to allow a comuter to find its own "technical indicators" via a machine learning problem.  This is where the bulk of our research has been.
+							</p>
 						</div>
 						<div class="desc">
 							<h3>Mission &amp; Vission</h3>
-							<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quo est quis mollitia ratione magni assumenda repellat atque modi temporibus tempore ex. Dolore facilis ex sunt ea praesentium expedita numquam?</p> 
-							<p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci rem dolorem nesciunt perferendis quae amet deserunt eum labore quidem minima.</p>
+							<p>We beleive that a free transparent market is a healthy market.</p> 
+							<p>Having access to tools and algorithms to perform test on hypothesis should be available to people beyond hedge funds and instatutions.</p>
 						</div>
 					</div>
+					<!--
 					<div class="col-md-6 col-md-pull-6">
 						<img class="img-responsive" src="images/img_bg_1.jpg" alt="about">
 						<img class="img-responsive" src="images/img_bg_2.jpg" alt="about">
 					</div>
-					
+				-->
 				</div>
 			</div>
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<span>Data Wranglers</span>
 					<h2>Meet Our Group</h2>
-					<p>Dedicated to sharing our fintech resarch.</p>
+					<p>Uncovering value in the for of knowledge from the markets.</p>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-md-4 col-sm-4 animate-box" data-animate-effect="fadeIn">
 					<div class="fh5co-staff">
-						<img src="images/person1.jpg" alt="Free HTML5 Templates by gettemplates.co">
+						<img src="images/corey.jpeg" alt="Corey Auger">
 						<h3>Corey Auger</h3>
 						<strong class="role">Computer Scientist</strong>
-						<p>We must go deeper !</p>
+						<p>We must go deeper.</p>
 						<ul class="fh5co-social-icons">
 							<li><a href="https://twitter.com/coreyauger"><i class="icon-twitter"></i></a></li>
 							<li><a href="https://github.com/coreyauger"><i class="icon-github"></i></a></li>
@@ -132,7 +139,7 @@
 				</div>
 				<div class="col-md-4 col-sm-4 animate-box" data-animate-effect="fadeIn">
 					<div class="fh5co-staff">
-						<img src="images/person2.jpg" alt="Free HTML5 Templates by gettemplates.co">
+						<img src="images/person2.jpg" alt="">
 						<h3>Hush Raven</h3>
 						<strong class="role">Front-end Developer</strong>
 						<p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
@@ -146,7 +153,7 @@
 				</div>
 				<div class="col-md-4 col-sm-4 animate-box" data-animate-effect="fadeIn">
 					<div class="fh5co-staff">
-						<img src="images/person3.jpg" alt="Free HTML5 Templates by gettemplates.co">
+						<img src="images/person3.jpg" alt="">
 						<h3>Alex King</h3>
 						<strong class="role">Back-end Developer</strong>
 						<p>Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
