--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 							<i class="icon-bar-graph"></i>
 						</span>
 						<h3>Market Trends</h3>
-						<p>Create scripts to identify market trigger patterns.  Daytraders use these signals to identify potential entries into the Market.</p>
+						<p>Create scripts to identify market trigger patterns.  Daytraders use these signals to identify potential enter and exit conditions.</p>
 					</div>
 				</div>
 				<div class="col-md-4 col-sm-4 text-center">
