--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 		</div>
 		<div class="project-content">
 			<div class="col-half">
-				<div class="project animate-box" style="background-image:url(images/project-3.jpg);">
+				<div class="project animate-box" style="background-image:url(images/dataset.png);">
 					<a href="https://www.kaggle.com/daytrader/ema-65-crossover" target="_blank">
 					<div class="desc">
 						<span>kaggle data</span>
@@ -185,13 +185,13 @@
 				</div>
 			</div>
 			<div class="col-half">
-				<div class="project-grid animate-box" style="background-image:url(images/project-5.jpg);">
+				<div class="project-grid animate-box" style="background-image:url(images/rnn.png);">
 					<div class="desc">
 						<span>Recurrent Neural Network RNN</span>
 						<h3>Results of applying RNN to our time series data.</h3>
 					</div>
 				</div>
-				<div class="project-grid animate-box" style="background-image:url(images/project-2.jpg);">
+				<div class="project-grid animate-box" style="background-image:url(images/support.png);">
 					<div class="desc">
 						<span>Data Analysis</span>
 						<h3>Exploring what it means to be a successful daytrader.</h3>
@@ -204,7 +204,7 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Data Driven Investing</h2>
+					<h2>Data Driven Results</h2>
 				</div>
 			</div>
 			<div class="row">
