--- a/about.html
+++ b/about.html
@@ -131,11 +131,12 @@
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
 					<span>Data Wranglers</span>
-					<h2>Meet Our Group</h2>
+					<h2>Meet the Team</h2>
 					<p>data driven market exploration.</p>
 				</div>
 			</div>
 			<div class="row">
+				<div class="col-md-4 col-sm-4 animate-box" data-animate-effect="fadeIn"></div>
 				<div class="col-md-4 col-sm-4 animate-box" data-animate-effect="fadeIn">
 					<div class="fh5co-staff">
 						<img src="images/corey.jpeg" alt="Corey Auger">
@@ -148,6 +149,8 @@
 						</ul>
 					</div>
 				</div>
+				<div class="col-md-4 col-sm-4 animate-box" data-animate-effect="fadeIn"></div>
+				<!--
 				<div class="col-md-4 col-sm-4 animate-box" data-animate-effect="fadeIn">
 					<div class="fh5co-staff">
 						<img src="images/person2.jpg" alt="">
@@ -176,6 +179,7 @@
 						</ul>
 					</div>
 				</div>
+			-->
 			</div>
 		</div>
 	</div>
